# bazel-react-boilerplate

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  package.json
design-system/: BUILD.bazel  tsconfig.app.json  tsconfig.json  tsconfig.test.json
design-system/src/: styles.css
design-system/src/app/: App.test.tsx  App.tsx
projects/demo-app/: BUILD.bazel
projects/demo-app/src/: index.html
projects/demo-app/src/app/: app.tsx
tools/: BUILD.bazel
tools/bazel_rules/: index.bzl
tools/bazel_rules/jest/: BUILD.bazel  jest-reporter.ts  jest-runner.ts  jest.bzl
