load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

ts_project(
    name = "demo-app",
    srcs = glob(["**/*.tsx"]),
    source_map = True,
    tsconfig = ":tsconfig_app",
    deps = [
        "@npm//@types/node",
        "@npm//react",
        "@npm//react-dom",
    ],
)

ts_config(
    name = "tsconfig_app",
    src = ":tsconfig.app.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.base.json",
    ],
)
